--- a/docker-deploy/.env.example
+++ b/docker-deploy/.env.example
@@ -1,9 +1,8 @@
 PYTHON_RELEASE=3.12-alpine
 BACKEND_COMPOSE_NAME=backend-compose
-PORT=21000
-HOST=0.0.0.0
+API_PORT=21000
+API_HOST=0.0.0.0
 NETWORK_NAME=front-back-external
-ADMIN_USERNAME=your-admin-username
 
 POSTGRES_RELEASE=15-alpine
 TZ=Europe/Moscow
@@ -12,6 +11,6 @@ POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=backend-app
 POSTGRES_PASSWORD=P5j8zrTKMFXQdt3cEYfynqa2
-POSTGRES_DB=writing-game
+POSTGRES_DB=statistics-collector
 DATABASE_DATA_PATH=./pg_data-volume
 DATABASE_PORT_TO_EXPOSE=19001
