--- a/docker-deploy/docker-compose.yaml
+++ b/docker-deploy/docker-compose.yaml
@@ -42,9 +42,8 @@ services:
       - DATABASE_USER=${POSTGRES_USER}
       - DATABASE_PASSWORD=${POSTGRES_PASSWORD}
       - DATABASE_DB=${POSTGRES_DB}
-      - ADMIN_USERNAME
-      - WS_PORT
-      - WS_HOST
+      - API_PORT
+      - API_HOST
     volumes:
       - ./dist:/usr/share/nginx/html:rw
       - ./certbot/www:/var/www/certbot/:ro
