--- a/docker-deploy/docker-compose.yaml
+++ b/docker-deploy/docker-compose.yaml
@@ -49,7 +49,7 @@ services:
       - ./certbot/www:/var/www/certbot/:ro
       - ./certbot/conf/:/etc/nginx/ssl/:ro
     ports:
-      - "${WS_PORT}:${WS_PORT}"
+      - "${API_PORT}:${API_PORT}"
     networks:
       - external-front-back
       - default
