--- a/docker-deploy/docker-compose.yaml
+++ b/docker-deploy/docker-compose.yaml
@@ -45,12 +45,15 @@ services:
       - API_PORT
       - API_HOST
     ports:
-      - "${API_PORT}:${API_PORT}"
+      - ${API_PORT}:${API_PORT}
     networks:
       - external-front-back
       - default
+      - host
     restart: unless-stopped
 
 networks:
   external-front-back:
       name: ${NETWORK_NAME}
+  host:
+    external: true
